[package]
name = "parco-ws-security"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Parco Web Services Security"
homepage = "https://github.com/williamcparks/parco-ws-security"
repository = "https://github.com/williamcparks/parco-ws-security"

keywords = ["parco", "ws-security"]
readme = "README.md"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.42"
parco-xml = "0.1.1"
rsa = { version = "0.9.10", features = ["sha1"] }
sha1 = "0.10.6"
