[package]
name = "parco-ws-security"
version = "0.1.6"
edition = "2024"
license = "MIT"
description = "Parco Web Services Security"
homepage = "https://github.com/williamcparks/parco-ws-security"
repository = "https://github.com/williamcparks/parco-ws-security"

keywords = ["parco", "ws-security"]
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# add support for Crypto Message Syntax Signing
cms-sign = [
    "dep:cms",
    "dep:const-oid",
    "dep:der",
    "dep:pem",
    "rsa/sha2",
    "dep:sha2",
    "dep:thiserror",
    "dep:x509-cert",
]

[dependencies]
base64 = "0.22.1"
chrono = "0.4.42"
parco-xml = "0.1.5"
rsa = { version = "0.9.10", features = ["sha1"] }
sha1 = "0.10.6"

# optional
cms = { version = "0.2.3", optional = true, features = ["builder"] }
const-oid = { version = "0.9.6", optional = true, features = ["db"] }
der = { version = "0.7.10", optional = true }
pem = { version = "3.0.6", optional = true }
sha2 = { version = "0.10.9", optional = true }
thiserror = { version = "2.0.17", optional = true }
x509-cert = { version = "0.2.5", optional = true }
